# pydb

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/concepts/: aggregations.md  constraints.md  csv.md  database.md  indexes.md  joins.md  mvcc.md  outbox.md  query-engine.md  query-planner.md  records.md  repl.md  schema.md  serializer.md  sql-parser.md  storage-engine.md  subqueries.md  tables.md  transactions.md  views.md  wal.md
src/pydb/: __init__.py  btree.py  cli.py  csv_io.py  database.py  errors.py  executor.py  formatter.py  index.py  mvcc.py  outbox.py  planner.py  query.py  record.py  schema.py  serializer.py  sql_parser.py  sql_tokenizer.py  statements.py  storage.py  table.py  transaction.py  types.py  wal.py
tests/: __init__.py  conftest.py  test_aggregations.py  test_btree.py  test_cli.py  test_constraints.py  test_csv_io.py  test_database.py  test_edge_cases.py  test_errors.py  test_executor.py  test_formatter.py  test_index.py  test_joins.py  test_mvcc.py  test_outbox.py  test_planner.py  test_query.py  test_record.py  test_schema.py  test_serializer.py  test_sql_parser.py  test_sql_tokenizer.py  test_sql_write_statements.py  test_storage.py  test_subqueries.py  test_table.py  test_transaction.py  test_types.py  test_views.py  test_wal.py
